--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <div class="main-image">
+    <div class="main-image" data-aos="zoom-in-up">
       <img src="Media/Images/Background 1 transparent.png">
     </div>
   </section>
